<resources>
    <string name="app_name">KasirBeras</string>
    <string name="title_product">Produk</string>
    <string name="title_cart">Keranjang</string>
    <string name="title_transaksi">Transaksi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cari_produk">Cari produk...</string>
    <string name="belum_ada_produk">Belum ada produk</string>
    <string name="tambah_produk_pertama_anda">Tambah produk pertama Anda</string>
    <string name="add_product">tambah produk</string>
    <string name="this_week">Minggu Ini</string>
    <string name="today">Hari Ini</string>
    <string name="default_transaction_count">0 Transaksi</string>
    <string name="transaction_count">Jumlah Transaksi</string>
    <string name="default_price">Rp 0</string>
    <string name="total_sales">Total Penjualan</string>
    <string name="sales_report">Laporan Penjualan</string>
    <string name="this_month">Bulan ini</string>
    <string name="all">Semua</string>
    <string name="custom">Custom</string>
    <string name="no_transaction_icon">no_transaction_icon</string>
    <string name="no_transactions">Tidak Ada Transaksi</string>
    <string name="transactions_will_appear_here">Transaksi akan muncul di sini</string>
    <string name="filter_transactions">filter</string>
    <string name="add_first_expense">Tambah pengeluaran pertama Anda</string>
    <string name="add_expense">Tambah Pengeluaran</string>
    <string name="no_expenses">Belum ada pengeluaran</string>
    <string name="no_expenses_icon">no_expenses_icon</string>
    <string name="default_paid">Lunas: Rp 0</string>
    <string name="default_installment">Cicil: Rp 0</string>
    <string name="default_unpaid">Belum Bayar: Rp 0</string>
    <string name="default_total_expense">Total: Rp 0</string>
    <string name="filter_expenses">filter_expenses</string>
    <string name="expenses">Pengeluaran</string>
</resources>